Added POST API variants with SQL Statements
